--- a/blog/style.css
+++ b/blog/style.css
@@ -31,8 +31,7 @@ div.navigation ul           { margin: 0; padding: 0; list-style: none; }
 div.navigation ul li        { display: inline; margin: 0 2px; padding: 0; }
 div.body                    { clear: both; }
 div.footer                  { margin-top: 55px; font-size: 16px;
-  border-top: 2px solid #f1f1f1;
-                              text-align: right; color: #76A4B8; }
+  border-top: 2px solid #f1f1f1; text-align: right; color: #76A4B8; }
 div.footer p                { margin: 0; }
 div.footer a                { color: #76A4B8; }
 
