--- a/drawing/photos.css
+++ b/drawing/photos.css
@@ -137,5 +137,5 @@ footer {
     border-top: 2px solid #f1f1f1;
     font-size: 16px;
 }
-.footer p                { margin: 0; }
-.footer a                { color: #76A4B8; }
+footer p                { margin: 0; }
+footer a                { color: #76A4B8; }
